--- a/index.html
+++ b/index.html
@@ -24,12 +24,27 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
+<p>I am a final-year PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
 <!-- Previously, I was fortunate to work with <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University.  -->
 
 </p>
-My research interests include topics in machine learning and optimization. My goal is to make machine learning systems more robust.
+My research interests are broadly in theoretical foundations and applications of trustworthy machine learning. My current focus is on 
+<!-- My research interests include topics in machine learning and optimization. My goal is to make machine learning systems more robust. -->
 </p>
+<ul>
+<li>Interpretable white-box deep neural networks [e.g., <a href="https://arxiv.org/abs/2306.01129">CRATE: white-box transformer</a>];
+</li>
+<li>Differenially private foundation models [e.g., <a href="https://arxiv.org/abs/2306.08842">ViP: A Differentially Private Vision Foundation Model</a>];
+</li>
+<li>Optimization and uncertainty quantification for collaborative (federated) learning [e.g., <a href="https://proceedings.mlr.press/v202/lu23i">FCP: Federated Conformal Predictors</a>];
+</li>
+<li>Robustness under distribution shifts [e.g., <a href="https://proceedings.mlr.press/v162/yu22i.html">ProjNorm: Predicting Out-of-Distribution Error</a>].
+</li>
+</ul>
+
+<b>I'm on the 2023-2024 academic job market.</b>
+
+
 
 <!-- <h2>News</h2>
 
@@ -39,7 +54,7 @@ My research interests include topics in machine learning and optimization. My go
        </li>
 </ul> -->
 
-<h2>Publications [<a href="https://scholar.google.com/citations?user=bZ9oyW8AAAAJ&hl=zh-CN&oi=ao">Google Scholar</a>] </h2> 
+<h2>Recent Publications [<a href="https://scholar.google.com/citations?user=bZ9oyW8AAAAJ&hl=zh-CN&oi=ao">Google Scholar</a>] </h2> 
        (*: equal contribution)
 <!-- <h3>Preprints</h3>
 <ul>
@@ -50,18 +65,42 @@ My research interests include topics in machine learning and optimization. My go
 
 <!-- <h3>Conference Proceedings</h3> -->
 <ul>
+<li><p><i>White-Box Transformers via Sparse Rate Reduction</i>.<br />
+<b>Yaodong Yu</b>, Sam Buchanan, Druv Pai, Tianzhe Chu, Ziyang Wu, Shengbang Tong, Benjamin D. Haeffele, Yi Ma. <br />  
+In Proceedings of the 37th Conference on Advances in Neural Information Processing Systems (NeurIPS'2023), 2023. [<a href="https://arxiv.org/abs/2306.01129">arxiv</a>] [<a href="https://github.com/Ma-Lab-Berkeley/CRATE">code</a>]<br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>ViP: A Differentially Private Foundation Model for Computer Vision</i>.<br />
+<b>Yaodong Yu</b>, Maziar Sanjabi, Yi Ma, Kamalika Chaudhuri, Chuan Guo. <br />  
+Preliminary version presented at Theory and Practice of Differential Privacy Workshop (TPDP'2023), 2023. [<a href="https://arxiv.org/abs/2306.08842">arXiv</a>] [<a href="https://github.com/facebookresearch/ViP-MAE">code</a>]<br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Federated Conformal Predictors for Distributed Uncertainty Quantification</i>.<br />
+Charles Lu*, <b>Yaodong Yu*</b>, Sai Praneeth Karimireddy, Michael Jordan, Ramesh Raskar. <br />  
+In Proceedings of the 40th International Conference on Machine Learning (ICML'2023), 2023. [<a href="https://proceedings.mlr.press/v202/lu23i.html">link</a>] [<a href="https://github.com/clu5/federated-conformal">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
 <li><p><i>Robust Calibration with Multi-domain Temperature Scaling</i>.<br />
 <b>Yaodong Yu</b>, Stephen Bates, Yi Ma, Michael I. Jordan. <br />  
-In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2206.02757">arXiv</a>] <br /></p>
+In Proceedings of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://openreview.net/pdf?id=UZJHudsQ7d">link</a>] <br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>TCT: Convexifying Federated Learning using Bootstrapped Neural Tangent Kernels</i>.<br />
 <b>Yaodong Yu</b>, Alexander Wei, Sai Praneeth Karimireddy, Yi Ma, Michael I. Jordan. <br />  
-In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2207.06343">arXiv</a>] [<a href="https://github.com/yaodongyu/TCT">code</a>] <br /></p>
+In Proceedings of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://openreview.net/pdf?id=jzd2bE5MxW">link</a>] [<a href="https://github.com/yaodongyu/TCT">code</a>] <br /></p>
 </li>
 </ul>
 <ul>
+<li><p><i>Predicting Out-of-Distribution Error with the Projection Norm</i>.<br />
+<b>Yaodong Yu</b>*, Zitong Yang*, Alexander Wei, Yi Ma, Jacob Steinhardt. <br />  
+In Proc. of the 39th International Conference on Machine Learning (ICML'2022), 2022. [<a href="https://proceedings.mlr.press/v162/yu22i.html">link</a>] [<a href="https://github.com/yaodongyu/ProjNorm">code</a>] <br /></p>
+</li>
+</ul>
+<!-- <ul>
 <li><p><i>What You See is What You Get: Distributional Generalization for Algorithm Design in Deep Learning</i>.<br />
 Bogdan Kulynych*, Yao-Yuan Yang*, <b>Yaodong Yu</b>, Jarosław Błasiok, Preetum Nakkiran. <br />  
 In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2204.03230">arXiv</a>] [<a href="https://github.com/yangarbiter/dp-dg">code</a>] <br /></p>
@@ -152,7 +191,7 @@ In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018), New
 <b>Yaodong Yu</b>*, Sulin Liu* and Sinno Jialin Pan.<br />
 In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017), Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
 </li>
-</ul>
+</ul> -->
 
 
 </p>
@@ -160,7 +199,7 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </ul>
 <h2>Professional Experiences</h2>
 <ul>
-<li><p><b>Visiting Researcher</b>, <a href="https://ai.facebook.com">FAIR</a>, San Francisco, Oct. 2022 &ndash; Present<br />
+<li><p><b>Visiting Researcher</b>, <a href="https://ai.facebook.com">FAIR at Meta</a>, San Francisco, Oct. 2022 &ndash; Present<br />
 </li>
 <li><p><b>Research Intern</b>, <a href="https://ai.facebook.com">Meta AI</a>, San Francisco, May. 2022 &ndash; Oct. 2022<br />
 </li>
@@ -170,8 +209,8 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </li>
 <li><p><b>Research Assistant</b>, <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">School of Computer Science and Engineering</a>, <a href="http://www.ntu.edu.sg/Pages/home.aspx">Nanyang Technological University (NTU)</a>, Singapore, Sep. 2016 &ndash; Aug. 2017<br />
 </li>
-<li><p><b>Machine Learning Engineer</b>, <a href="https://www.wecash.net">Wecash</a>, Beijing, China, June 2015 &ndash; May. 2016<br />
-</li>
+<!-- <li><p><b>Machine Learning Engineer</b>, <a href="https://www.wecash.net">Wecash</a>, Beijing, China, June 2015 &ndash; May. 2016<br />
+</li> -->
 </ul>
 
 
