--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ My research interests are broadly in theoretical foundations and applications of
 <ul>
 <li>Interpretable white-box deep neural networks [e.g., <a href="https://arxiv.org/abs/2306.01129">CRATE: white-box transformer</a>];
 </li>
-<li>Differenially private foundation models [e.g., <a href="https://arxiv.org/abs/2306.08842">ViP: A Differentially Private Vision Foundation Model</a>];
+<li>Differentially private foundation models [e.g., <a href="https://arxiv.org/abs/2306.08842">ViP: A Differentially Private Vision Foundation Model</a>];
 </li>
 <li>Optimization and uncertainty quantification for collaborative (federated) learning [e.g., <a href="https://proceedings.mlr.press/v202/lu23i">FCP: Federated Conformal Predictors</a>];
 </li>
