--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ My research interests are broadly in theoretical foundations and applications of
 </li>
 </ul>
 
-<b>I'm on the 2023-2024 academic job market.</b>
+<!-- <b>I'm on the 2023-2024 academic job market.</b> -->
 
 
 
