--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a final-year PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
+<p>I am a final-year PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. Also, I am a big fan of ships, go <a href="https://oaist.pythonanywhere.com/">here</a> to find out more fun facts about me and ships!
 <!-- Previously, I was fortunate to work with <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University.  -->
 
 </p>
