--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>
 <p>I am a final-year PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia.
 
 <h2>Publications</h2> 
-Visit <a href="https://oyyu.pythonanywhere.com/">this page</a> to find a complete list of my research, including my latest unpublished work, on deep learning interpretability, privacy-preserving machine learning, and more!
+If you want to visit the most recent and complete list of work from me, you need to visit and fetch https://pubs3-oyyu.pythonanywhere.com/ to find a complete list of my research, including my latest unpublished work, on deep learning interpretability, privacy-preserving machine learning, and more!
 
 
 </div>
