--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </ul>
 <h2>Professional Experiences</h2>
 <ul>
-<li><p><b>Visiting Researcher</b>, <a href="https://ai.facebook.com">FAIR at Meta</a>, San Francisco, Oct. 2022 &ndash; Present<br />
+<li><p><b>Visiting Researcher</b>, <a href="https://ai.facebook.com">FAIR at Meta</a>, San Francisco, Oct. 2022 &ndash; Sep. 2024<br />
 </li>
 <li><p><b>Research Intern</b>, <a href="https://ai.facebook.com">Meta AI</a>, San Francisco, May. 2022 &ndash; Oct. 2022<br />
 </li>
